@startuml domain

hide empty methods
hide empty fields

' nodes
' -----------------------------------------------

class UserEntry {
    id: Number
    passportSeries: Number
    passportNumber: Number
    passwordHash: String
    refreshTokenHash: String
}

class UserData {
    id: Number
    name: String
    surname: String
    patronymic: String
    address: String
}

class Task {
    id: Number
    userId: Number
    timeOfCreation: Time
    startTime: Time
    stopTime: Time
}

' edges
' -----------------------------------------------

UserData --> UserEntry
Task --> UserEntry

@enduml